# HeadfirstDesignPatterns

./: .gitignore  readme.md
AdapterAndFacadePattern/: adapterandfacadepattern.cpp  meson.build
AdapterAndFacadePattern/include/: meson.build
AdapterAndFacadePattern/include/adapter/: Duck.h  Ducks.h  Turkey.h  TurkeyAdapter.h  Turkeys.h
AdapterAndFacadePattern/include/facade/: Amplifier.h  HomeTheaterFacade.h  PopcornPopper.h  Projector.h  Screen.h  StreamingPlayer.h  TheaterLights.h  Tuner.h
CommandPattern/: meson.build  remotecontrol.cpp
CommandPattern/include/: Command.h  Commands.h  MultiSlotRemoteControl.h  SimpleRemoteControl.h  meson.build
CommandPattern/include/vendors/: GarageDoor.h  HotTub.h  Light.h  Stereo.h  TV.h
CommandPattern/source/: MultiSlotRemoteControl.cpp  SimpleRemoteControl.cpp  meson.build
DecoratorPattern/: meson.build  starbuzz.cpp
DecoratorPattern/include/: Beverage.h  Beverages.h  CondimentDecorator.h  Condiments.h
FactoryPattern/: meson.build  pizzatime.cpp
FactoryPattern/include/: SimplePizzaFactory.h  meson.build
FactoryPattern/include/ingredients/: ChicagoIngredientFactory.h  ChicagoIngredients.h  CommonIngredients.h  Ingredients.h  NYIngredientFactory.h  NYIngredients.h  PizzaIngredientFactory.h
FactoryPattern/include/pizzas/: ChicagoPizzas.h  NYPizzas.h  Pizza.h  Pizzas.h
FactoryPattern/include/pizzastores/: PizzaStore.h  PizzaStores.h
FactoryPattern/source/: SimplePizzaFactory.cpp  meson.build
FactoryPattern/source/pizzas/: Pizza.cpp  meson.build
FactoryPattern/source/pizzastores/: ChicagoStylePizzaStore.cpp  NYStylePizzaStore.cpp  PizzaStore.cpp  meson.build
ObserverPattern/: meson.build  weatherstation.cpp
ObserverPattern/include/: DisplayElement.h  WeatherData.h  WeatherObserver.h  WeatherSubject.h  meson.build
ObserverPattern/include/Displays/: CurrentConditionsDisplay.h  ForecastDisplay.h  HeatIndexDisplay.h  StatisticsDisplay.h
ObserverPattern/source/: WeatherData.cpp  meson.build
SingletonPattern/: chocolatefactory.cpp  meson.build
SingletonPattern/include/: ChocolateBoiler.h
SingletonPattern/source/: ChocolateBoiler.cpp  meson.build
StrategyPattern/: meson.build  simuduck.cpp
StrategyPattern/include/: Duck.h  MallardDuck.h  meson.build
StrategyPattern/include/Fly/: FlyBehavior.h  FlyNoWay.h  FlyWithWings.h
StrategyPattern/include/Quack/: MuteQuack.h  NormalQuack.h  QuackBehavior.h  Squeak.h
StrategyPattern/source/: Duck.cpp  MallardDuck.cpp  meson.build
TemplateMethodPattern/: meson.build  starbuzz.cpp
TemplateMethodPattern/include/: CaffeineBeverage.h  CaffeineBeverageWithHook.h  Coffee.h  CoffeeWithHook.h  Tea.h
TemplateMethodPattern/source/: CaffeineBeverage.cpp  CaffeineBeverageWithHook.cpp  Coffee.cpp  CoffeeWithHook.cpp  Tea.cpp  meson.build
