project('AdapterAndFacadePattern', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3',
                     'cpp_std=c++14'])

include = [include_directories('include')]

subdir('include')

exe = executable(
  'AdapterAndFacadePattern',
  'adapterandfacadepattern.cpp',
  include_directories : include)
